# alberto-cli

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  dist-workspace.toml  nfpm.yaml
.github/workflows/: ci.yml  packages.yml  release.yml
docs/: manual-alberto-cli.md
docs/superpowers/plans/: 2026-07-05-improvements-phases-0-3.md  2026-07-12-tui-v2.md
docs/superpowers/specs/: 2026-07-04-alberto-cli-improvements-design.md  2026-07-12-tui-v2-design.md
proto/: binary_transfer.proto  node_manager.proto
src/: cli.rs  client.rs  config.rs  lib.rs  main.rs  tui.rs
src/commands/: admin.rs  config_cmd.rs  download.rs  mod.rs  node.rs  tenant.rs  upload.rs
tests/: cli.rs
