[package]
name = "alberto-cli"
version = "0.1.0"
edition = "2021"
description = "CLI para NodeService: upload por gRPC streaming (backpressure), operaciones de nodos y TUI con preview de PDFs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/odtorres/alberto-cli"
readme = "README.md"
keywords = ["cli", "grpc", "tui", "document-management"]
categories = ["command-line-utilities"]
include = ["src/**", "proto/**", "build.rs", "README.md", "LICENSE-*"]

[[bin]]
name = "alberto"
path = "src/main.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
async-stream = "0.3"
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
indicatif = "0.17"
# TUI (alberto tui): navegador de nodos + preview de PDFs en terminal
ratatui = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }
tempfile = "3"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"

[profile.release]
strip = true
lto = true
